NEWS -- an overview of user-visible changes with each release

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.13                        (2024-07-12)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.12                        (2024-07-04)
----------------------------------------------------------------------
 * Fixed a bug in the 32-bit library in the source code.

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.11                        (2024-06-11)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.10.2                      (2024-06-03)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.10.1                      (2024-05-28)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.10                        (2024-05-22)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.9.9                       (2024-05-21)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.9.8                       (2024-05-09)
----------------------------------------------------------------------