@@ -1,4 +1,4 @@
-List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.2.13:
+List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.2.14:
 
 Epson EC-4020 Series
 Epson EC-4030 Series
@@ -207,6 +207,7 @@ Epson WF-C5790 Series
 Epson WF-C5810 Series
 Epson WF-C5890BAM
 Epson WF-C5890 Series
+Epson WF-C5891 Series
 Epson WF-C8190B
 Epson WF-C8190 Series
 Epson WF-C8610 Series
