@@ -1,9 +1,10 @@
 # Copyright 1999-2024 Gentoo Authors
 # Distributed under the terms of the GNU General Public License v2
 
-EAPI=7
+EAPI=8
+inherit autotools
 
-DSC_F="dsc/f/03/00/15/98/72/69e49d4249a14854ea420bd2e9fd53ac317766d2"
+DSC_F="dsc/f/03/00/16/04/80/9eed4e48a994b2ce7d9c83aa7fa7766f2c2d7ef3"
 MY_PV="${PV}-1"
 
 DESCRIPTION="Epson ESC/P-R 2 generic Inkjet Printer Driver"
@@ -27,6 +28,11 @@ PATCHES=(
     # Patch URL: https://aur.archlinux.org/cgit/aur.git/commit/?h=epson-inkjet-printer-escpr2&id=aca2e4ad5779471ea4c35768ec8db89d244a37c5
     "${FILESDIR}/gcc-no-implicit-function-declaration-1.2.10.patch"
 )
+
+src_prepare() {
+    default
+    eautoreconf
+}
 
 src_configure() {
     econf --disable-shared
